--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/next": "^1.8.0",
     "@hookform/resolvers": "^4.1.3",
+    "@opentelemetry/exporter-jaeger": "^1.25.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -44,6 +46,7 @@
     "firebase": "^11.7.3",
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
+    "negotiator": "^0.6.3",
     "next": "15.2.3",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
@@ -57,6 +60,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
